--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <script
+      src="https://kit.fontawesome.com/020bb6cf04.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Odin Book</title>
   </head>
   <body>
